framec_tests/language_specific/c/v3_outline/negative/multi_issue_outline_tolerant.frm
@target c

system S {
    machine:
        $A
        e() {
            => $^ oops
            -> $ZZ();
        }
}

